[project]
name = "chronos"
version = "0.1.0"
description = "Chronos webhook and job service"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.2",
    "celery==5.6.3",
    "cryptography==47.0.0",
    "fastapi==0.136.1",
    "fastapi_utilities==0.3.1",
    "httpx==0.28.1",
    "logfire[fastapi,requests,psycopg2,celery]==4.32.1",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "redis==7.4.0",
    "requests==2.33.1",
    "respx==0.23.1",
    "sentry-sdk==2.58.0",
    "sqlmodel==0.0.38",
    "uvicorn==0.46.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
]

[tool.ruff]
    line-length = 120

[tool.ruff.format]
    quote-style = 'single'

[tool.ruff.lint.isort]
    combine-as-imports = true

[tool.ruff.lint]
    extend-select = ['I']

[tool.pytest.ini_options]
    testpaths = ['tests']
    addopts = '--tb=native'
    filterwarnings = []

[tool.coverage.run]
    source = ['chronos']
    branch = true
    omit = ['chronos/main.py']

[tool.coverage.report]
    precision = 2
    exclude_lines = [
        'pragma: no cover',
        'def __repr__',
        'def __str__',
        'raise NotImplementedError',
        'raise NotImplemented',
    ]


[tool.logfire]
    ignore_no_config = true