[project]
name = "chronos"
version = "0.1.0"
description = "Chronos webhook and job service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler==3.11.2",
    "celery==5.6.3",
    "cryptography==49.0.0",
    "fastapi==0.138.0",
    "fastapi_utilities==0.3.1",
    "httpx==0.28.1",
    "logfire[fastapi,httpx,psycopg2,celery]==4.37.0",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "redis==8.0.1",
    "requests==2.34.2",
    "respx==0.23.1",
    "sentry-sdk==2.63.0",
    "sqlmodel==0.0.38",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "coverage==7.14.3",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
]

[tool.alembic]
    script_location = "migrations"
    file_template = "%%(year)s%%(month).2d%%(day).2d%%(hour).2d%%(minute).2d_%%(rev)s"

[tool.ruff]
    line-length = 120

[tool.ruff.format]
    quote-style = 'single'

[tool.ruff.lint.isort]
    combine-as-imports = true

[tool.ruff.lint]
    extend-select = ['I']

[tool.pytest.ini_options]
    testpaths = ['tests']
    addopts = '--tb=native'
    filterwarnings = []

[tool.coverage.run]
    source = ['chronos']
    branch = true
    omit = ['chronos/main.py']

[tool.coverage.report]
    precision = 2
    exclude_lines = [
        'pragma: no cover',
        'def __repr__',
        'def __str__',
        'raise NotImplementedError',
        'raise NotImplemented',
    ]


[tool.logfire]
    ignore_no_config = true
    pydantic_plugin_record = "failure"
